# SynTechRev-PolyCodCal

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REPAIR_STRATEGY.md  CONTRIBUTING.md  COPILOT_INTEGRATION.md  GETTING_STARTED.md  GOVERNANCE.md  IMPLEMENTATION_SUMMARY.md  LICENSE_COMPLIANCE.md  LINE_LENGTH_VERIFICATION.md  MAINTAINER_INSTRUCTIONS.md  PHASE5_COMPLETION_GUIDE.md  PHASE5_SUMMARY.md  PHASE6_COMPLETION.md  PHASE6_COMPLETION_SUMMARY.md  PHASE7_COMPLETION_SUMMARY.md  PHASE7_EXECUTIVE_SUMMARY.md  PHASE7_FINAL_ASSESSMENT.md  PHASE7_FINAL_STATUS.md  PHASE7_KICKOFF.md  PHASE7_READINESS.md  PR10_SOLUTION_SUMMARY.md  PR_DESCRIPTION.md  PR_RESOLUTION_SUMMARY.md  PR_SUMMARY.md  QUICKSTART.md  README.md  RESOLUTION_SUMMARY.md  ROADMAP.md  SECURITY.md  SOLUTION_SUMMARY.md  START_HERE.md  SYNC_README.md  SynTechRev-PolyCodCal.code-workspace  TAGGING_GUIDE.md  TASK_COMPLETE.md  TESTPYPI_UPLOAD_GUIDE.md  (+14 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
AGENT_COLLABORATION/: index.html
DEVELOPMENT_WORKFLOW/: index.html
ENVIRONMENT_RESET/: index.html
PHASE6_INGESTION/: index.html
VSCODE_TAGGING/: index.html
announcements/: release_v0.1.0.md
data/: README.md
data/cases/: 01_marbury_v_madison_1803.json  02_erie_railroad_v_tompkins_1938.json  03_brown_v_board_1954.json  04_gideon_v_wainwright_1963.json  05_miranda_v_arizona_1966.json  06_loving_v_virginia_1967.json  07_tinker_v_des_moines_1969.json  08_roe_v_wade_1973.json  09_united_states_v_nixon_1974.json  10_shelby_county_v_holder_2013.json  Brown_v_Board_of_Education.json  Gideon_v_Wainwright.json  Miranda_v_Arizona.json  Roe_v_Wade.json  USC_Title_42_Sec_1983.json
data/vectors/: case_embeddings.npy  case_embeddings.npz
docs/: AGENT_COLLABORATION.md  DEVELOPMENT_WORKFLOW.md  ENVIRONMENT_RESET.md  ETHICAL_AI_TRANSPARENCY.md  INDEX.md  LEGAL_DATA_GENERATOR_OVERVIEW.md  PHASE6_IMPLEMENTATION_SUMMARY.md  PHASE6_INGESTION.md  PHASE6_QUICK_START.md  PHASE7_GENESIS_GATEWAY.md  VSCODE_TAGGING.md  index.md
examples/: events.jsonl  inspirations.json
releases/: v0.1.0.md
scripts/: README.md  cleanup_repo.sh  create_release_tag.sh  demo_phase6.py  feedback_monitor.py  genesis_gateway.py  legal_data_report.py
search/: search_index.json
src/syntechrev_polycodcal/: __init__.py  calculator.py  core.py  data_loader.py  feedback_monitor.py
src/syntechrev_polycodcal/genesis_gateway/: __init__.py  alignment.py  cli.py  compiler.py  gateway.py  inspiration.py  parser.py  registry.py
src/syntechrev_polycodcal/legal_generator/: __init__.py  cli.py  config.py  embedder.py  ingest.py  normalize.py  retriever.py  schema.py  validate.py  validator.py
src/syntechrev_polycodcal/schemas/: __init__.py  legal_record.py
tests/: __init__.py  test_calculator.py  test_core.py  test_data_loader.py  test_feedback_monitor.py  test_feedback_monitor_extra.py  test_feedback_monitor_hysteresis.py  test_genesis_gateway_alignment.py  test_genesis_gateway_compiler.py  test_genesis_gateway_inspiration.py  test_genesis_gateway_integration.py  test_genesis_gateway_parser.py  test_genesis_gateway_registry.py  test_legal_generator_embedder.py  test_legal_generator_ingest.py  test_legal_generator_ingest_modes.py  test_legal_generator_normalize.py  test_legal_generator_normalize_private.py  test_legal_generator_normalize_uscode.py  test_legal_generator_phase6.py  test_legal_generator_retriever.py  test_legal_generator_schema.py  test_legal_generator_validate.py
