[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "syntechrev-polycodcal"
version = "0.1.0"
description = "Polymathic CodCal"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "idna==3.10",
    "numpy==2.3.3",
    "pandas==2.3.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.5",
    "six==1.17.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["src/syntechrev_polycodcal"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
