[tool.poetry]
name = "syntechrev-polycodcal"
version = "0.1.0"
description = "Polymathic CodCal - Phase scaffolding"
authors = ["You <you@example.com>"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py313"]
