[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syntechrev-polycodcal"
version = "0.2.1"
description = "Feedback monitoring system with sliding-window aggregation and alerting capabilities"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SynTechRev", email = "you@example.com"}
]
keywords = ["monitoring", "feedback", "alerting", "analytics", "legal-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "certifi>=2025.10.5",
    "charset-normalizer>=3.4.3",
    "idna>=3.10",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "python-dateutil>=2.9.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "six>=1.17.0",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "black==25.11.0",
    "pytest>=8.3.2",
    "pytest-cov>=4.0.0",
    "ruff>=0.13.3",
    "mypy>=1.5.1",
    "pre-commit>=4.3.0",
    "flake8>=7.3.0",
    "build>=1.2.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.39",
]

[project.scripts]
syntech-monitor = "syntechrev_polycodcal.feedback_monitor:main"
genesis-gateway = "syntechrev_polycodcal.genesis_gateway:main"
legal-generator = "syntechrev_polycodcal.legal_generator.cli:main"

[project.urls]
Homepage = "https://github.com/SynTechRev/SynTechRev-PolyCodCal"
Documentation = "https://github.com/SynTechRev/SynTechRev-PolyCodCal#readme"
Repository = "https://github.com/SynTechRev/SynTechRev-PolyCodCal"
Issues = "https://github.com/SynTechRev/SynTechRev-PolyCodCal/issues"
Changelog = "https://github.com/SynTechRev/SynTechRev-PolyCodCal/blob/main/CHANGELOG.md"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
